--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@ body {
   background: url("10.jpg") no-repeat
     center top/cover;
 }
+.slide:nth-child(11) {
+  background: url("11.jpg") no-repeat
+    center top/cover;
+}
+.slide:nth-child(12) {
+  background: url("12.jpg") no-repeat
+    center top/cover;
+}
 
 
 .buttons button#prev {
@@ -138,6 +146,8 @@ body {
   <!-- partial:index.partial.html -->
   <div class="slider">
     <div class="slide current"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
     <div class="slide"></div>
     <div class="slide"></div>
     <div class="slide"></div>
