--- a/index.html
+++ b/index.html
@@ -42,84 +42,57 @@ body {
   opacity: 1;
 }
 
+.slide {
+  background-size: cover;
+  background-position: center center;
+}
 
 .slide:first-child {
-  background: url("1.jpg") no-repeat
-    center top/cover;
+  background-image: url("1.jpg");
 }
 
 .slide:nth-child(2) {
-  background: url("2.jpg") no-repeat
-    center top/cover;
+  background-image: url("2.jpg");
 }
 
 .slide:nth-child(3) {
-  background: url("3.jpg") no-repeat
-    center top/cover;
+  background-image: url("3.jpg");
 }
+
 .slide:nth-child(4) {
-  background: url("4.jpg") no-repeat
-    center top/cover;
+  background-image: url("4.jpg");
 }
+
 .slide:nth-child(5) {
-  background: url("5.jpg") no-repeat
-    center top/cover;
+  background-image: url("5.jpg");
 }
+
 .slide:nth-child(6) {
-  background: url("6.jpg") no-repeat
-    center top/cover;
+  background-image: url("6.jpg");
 }
+
 .slide:nth-child(7) {
-  background: url("7.jpg") no-repeat
-    center top/cover;
+  background-image: url("7.jpg");
 }
+
 .slide:nth-child(8) {
-  background: url("8.jpg") no-repeat
-    center top/cover;
+  background-image: url("8.jpg");
 }
+
 .slide:nth-child(9) {
-  background: url("9.jpg") no-repeat
-    center top/cover;
+  background-image: url("9.jpg");
 }
+
 .slide:nth-child(10) {
-  background: url("10.jpg") no-repeat
-    center top/cover;
+  background-image: url("10.jpg");
 }
+
 .slide:nth-child(11) {
-  background: url("11.jpg") no-repeat
-    center top/cover;
+  background-image: url("11.jpg");
 }
+
 .slide:nth-child(12) {
-  background: url("12.jpg") no-repeat
-    center top/cover;
-}
-
-
-.buttons button#prev {
-  position: absolute;
-  top: 50%;
-  left: 1rem;
-}
-
-.buttons button#next {
-  position: absolute;
-  top: 50%;
-  right: 1rem;
-}
-
-.buttons button {
-  border: 2px solid #e5ebf3;
-  background-color: transparent;
-  color: #e5ebf3;
-  cursor: pointer;
-  padding: 13px 15px;
-  border-radius: 50%;
-  outline: none;
-}
-
-.buttons button:hover {
-  background-color: #e5ebf3;
-  color: #362a2b;
+  background-image: url("12.jpg");
 }
 
 @media (min-width: 640px) and (min-height: 640px) {
@@ -143,7 +116,6 @@ body {
 </head>
 
 <body>
-  <!-- partial:index.partial.html -->
   <div class="slider">
     <div class="slide current"></div>
     <div class="slide"></div>
@@ -158,7 +130,7 @@ body {
     <div class="slide"></div>
     <div class="slide"></div>
   </div>
-  <!-- partial -->
+
   <script>
     const slides = document.querySelectorAll(".slide");
     const auto = true;
@@ -175,22 +147,11 @@ body {
       }
     };
 
-    const prevSlide = () => {
-      const current = document.querySelector(".current");
-      current.classList.remove("current");
-      if (current.previousElementSibling) {
-        current.previousElementSibling.classList.add("current");
-      } else {
-        slides[slides.length - 1].classList.add("current");
-      }
-    };
-
     if (auto) {
       slideInterval = setInterval(nextSlide, intervalTime);
     }
 
   </script>
-
 </body>
 
 </html>
