--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CodePen - Full-Screen Responsive Image Slider</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css'>
   <link rel="stylesheet" href="./style.css">
@@ -19,6 +20,7 @@ body {
   font-family: "Lexend", sans-serif;
   background-color: #362a2b;
   color: #e5ebf3;
+  overflow: hidden;
 }
 
 .slider {
