--- a/index.html
+++ b/index.html
@@ -15,18 +15,27 @@
       padding: 0;
     }
 
+    html, body {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background: transparent;
+    }
+
     body {
       font-family: "Lexend", sans-serif;
-      background-color: #362a2b;
-      color: #e5ebf3;
-      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: transparent;
     }
 
     .slider {
       position: relative;
       width: 100vw;
-      height: 100vh;
+      height: calc(100vw * 0.5625); /* 16:9 aspect ratio */
       overflow: hidden;
+      background: transparent;
     }
 
     .slide {
@@ -92,17 +101,6 @@
     .slide:nth-child(12) {
       background-image: url("12.jpg");
     }
-
-    @media only screen and (max-width: 640px) {
-      .slider {
-        height: 100vh;
-      }
-
-      .slide {
-        background-size: cover;
-        background-position: center;
-      }
-    }
   </style>
 </head>
 
@@ -141,6 +139,14 @@
     if (auto) {
       slideInterval = setInterval(nextSlide, intervalTime);
     }
+
+    const adjustBodyHeight = () => {
+      const sliderHeight = document.querySelector('.slider').offsetHeight;
+      document.body.style.height = `${sliderHeight}px`;
+    };
+
+    window.addEventListener('resize', adjustBodyHeight);
+    window.addEventListener('load', adjustBodyHeight);
   </script>
 </body>
 
